Fixed wrong padding in link list

--- a/src/app/less/links.less
+++ b/src/app/less/links.less
@@ -1,7 +1,8 @@
 @import "variables";
 @import "mixins";
 
-.links {
+.linkList {
+	padding: @paddingBig;
 
 	> .bar {
 		display: table;
